Updating the api spec to include the endpoint to get all available organs
#document #story[954]
